--- a/src/App.scss
+++ b/src/App.scss
@@ -10,3 +10,15 @@ body,
 html {
   overflow-x: hidden;
 }
+
+.global-wrapper {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.3);
+}
