--- a/src/components/UI/input-info/InputInfo.scss
+++ b/src/components/UI/input-info/InputInfo.scss
@@ -8,6 +8,14 @@
   padding: 5px 2px;
   font-size: 14px;
 
+  @media (max-width: 760px) {
+    font-size: 13px;
+  }
+
+  @media (max-width: 640px) {
+    font-size: 12px;
+  }
+
   &-wrapper {
     width: 90%;
   }
