--- a/src/components/UI/leave-button/LeaveButton.scss
+++ b/src/components/UI/leave-button/LeaveButton.scss
@@ -7,6 +7,17 @@
   transform: rotate(45deg);
   cursor: pointer;
 
+  @media (max-width: 760px) {
+    width: 29px;
+    height: 29px;
+  }
+
+  @media (max-width: 640px) {
+    width: 24px;
+    height: 24px;
+    cursor: default;
+  }
+
   .horizontal,
   .vertical {
     width: 100%;
@@ -16,6 +27,10 @@
     position: absolute;
     border-radius: 12px;
     top: 50%;
+
+    @media (max-width: 640px) {
+      height: 5px;
+    }
   }
 
   .vertical {
