--- a/src/components/UI/selector/TypeSelector.scss
+++ b/src/components/UI/selector/TypeSelector.scss
@@ -2,6 +2,14 @@
   width: 300px;
   position: relative;
 
+  @media (max-width: 760px) {
+    width: 200px;
+  }
+
+  @media (max-width: 540px) {
+    width: 140px;
+  }
+
   .change-item {
     width: 100%;
   }
@@ -11,6 +19,15 @@
   position: absolute;
   top: -22px;
   left: 0;
+
+  @media (max-width: 760px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 540px) {
+    font-size: 10px;
+    top: -14px;
+  }
 }
 
 select {
@@ -19,4 +36,13 @@ select {
   background-color: transparent;
   border-bottom: 2px solid rgb(0, 206, 209);
   padding: 2px 6px;
+
+  @media (max-width: 760px) {
+    padding: 2px 3px;
+    font-size: 12px;
+  }
+
+  @media (max-width: 540px) {
+    font-size: 10px;
+  }
 }
