--- a/src/components/alert/AlertBlock.scss
+++ b/src/components/alert/AlertBlock.scss
@@ -12,11 +12,32 @@
   transform: translateX(-140%);
   transition: all 0.3s ease;
 
+  @media (max-width: 1160px) {
+    top: 10px;
+  }
+
+  @media (max-width: 760px) {
+    width: 220px;
+    height: 40px;
+  }
+
+  @media (max-width: 540px) {
+    width: 140px;
+  }
+
   p {
     color: red;
     font-size: 14px;
     font-weight: 500;
     text-align: center;
+
+    @media (max-width: 760px) {
+      font-size: 12px;
+    }
+
+    @media (max-width: 540px) {
+      font-size: 10px;
+    }
   }
 
   &.alert {
