--- a/src/components/sections-of-form/search-section/SearchSection.scss
+++ b/src/components/sections-of-form/search-section/SearchSection.scss
@@ -4,11 +4,23 @@
   justify-content: center;
   align-items: center;
   gap: 42px;
+
+  @media (max-width: 540px) {
+    gap: 28px;
+  }
 }
 
 .search-wrapper {
   width: 300px;
   position: relative;
+
+  @media (max-width: 760px) {
+    width: 200px;
+  }
+
+  @media (max-width: 540px) {
+    width: 140px;
+  }
 
   .search-input {
     width: 96%;
@@ -18,6 +30,11 @@
     border-bottom: 2px solid rgb(0, 206, 209);
     padding: 2px 6px;
 
+    @media (max-width: 760px) {
+      padding: 2px 3px;
+      font-size: 12px;
+    }
+
     &.no-valid {
       border-bottom: 2px solid red;
       filter: blur(0.6px);
@@ -26,6 +43,10 @@
     &:focus ~ .signature-search,
     &:not(:placeholder-shown) ~ .signature-search {
       top: -24px;
+
+      @media (max-width: 540px) {
+        top: -14px;
+      }
     }
   }
 
@@ -34,5 +55,15 @@
     top: -4px;
     left: 0;
     transition: all 0.3s ease;
+
+    @media (max-width: 760px) {
+      font-size: 14px;
+      top: -2px;
+    }
+
+    @media (max-width: 540px) {
+      font-size: 10px;
+      top: 0;
+    }
   }
 }
