--- a/src/components/table-menu/TableMenu.scss
+++ b/src/components/table-menu/TableMenu.scss
@@ -12,6 +12,21 @@
   opacity: 0.5;
   transition: all 2s ease;
 
+  @media (max-width: 1160px) {
+    margin: 80px auto 40px;
+  }
+
+  @media (max-width: 760px) {
+    width: 450px;
+    height: 240px;
+    margin: 64px auto 40px;
+  }
+
+  @media (max-width: 540px) {
+    width: 320px;
+    height: 180px;
+  }
+
   &.move {
     transform: translateX(0);
     opacity: 1;
